# BLE-scanner

./: CMakeLists.txt  README.rst  prj.conf
src/: data.py  main.c  scan.c
